<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/cardPadding"
            >
            <TextView
                android:id="@+id/step_caption_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_step_number"
                tools:text="@string/text_placeholder_name"
                style="@style/CardCaptionText"
                />

            <ImageView
                android:id="@+id/thumb_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/short_description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/desc_step_description"
                android:textSize="@dimen/step_description_fontSize"
                tools:text="@string/text_placeholder_description"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>