<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    >

    <TextView
        android:id="@+id/no_data_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:text="@string/text_no_data_to_show"
        android:contentDescription="@string/text_no_data_to_show"
        />

    <ScrollView
        android:id="@+id/content_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_ingredients"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    >

                    <TextView
                        android:id="@+id/ingredients_caption_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ingredients"
                        android:contentDescription="@string/desc_ingredients"
                        style="@style/CardCaptionText"
                        android:gravity="center"
                        />

                    <TextView
                        android:id="@+id/ingredient_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/text_placeholder_name"
                        android:textSize="@dimen/listFontsize"
                        android:gravity="center"
                        android:contentDescription="@string/desc_ingredients"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/step_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/desc_step_list"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>