<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/list_item_vertical_margin"
    android:layout_marginBottom="@dimen/list_item_vertical_margin">
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/list_item_padding">

            <ImageView
            android:id="@+id/image_view"
            android:layout_width="@dimen/recipe_thumbnail_width"
            android:layout_height="@dimen/recipe_thumbnail_height"
            android:layout_marginRight="@dimen/view_horizontal_margin"
            android:layout_marginEnd="@dimen/view_horizontal_margin"
            android:contentDescription="@string/desc_recipe_image"
            android:src="@drawable/no_image_available_md"
            />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/recipe_list_item_fontSize"
                    android:contentDescription="@string/desc_recipe_name"
                    tools:text="@string/text_placeholder_name"
                    />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>